--- a/index.html
+++ b/index.html
@@ -7,70 +7,66 @@
 </head>
 <body>
     <main>
-    <table>
-        <thead>
-            <tr >
+    <div>
+        <table>
+            <tr>
                 <th>Name &#8194;<span class="triangle">&#9660;</span></th>
                 <th>Date</th>
-                <th>    </th>
+                <th></th>
             </tr>
-        </thead>
-        <tbody>
-            <tr >
+            <tr>
                 <td >File.pdf</td>
                 <td class="color-grey">3 mins ago</td>
                 <td ><span class="color-grey">&#8226;&#8226;&#8226;</span></td>
             </tr>
-            <tr >
+            <tr>
                 <td >File.pdf</td>
                 <td class="color-grey">Yesterday</td>
                 <td ><span class="color-grey">&#8226;&#8226;&#8226;</span></td>
             </tr>
-            <tr >
-                <td >File.pdf</td>
+            <tr>
+                <td>File.pdf</td>
                 <td class="color-grey">June 1st, 2019</td>
-                <td ><span class="color-grey">&#8226;&#8226;&#8226;</span></td>
+                <td><span class="color-grey">&#8226;&#8226;&#8226;</span></td>
             </tr>
-        </tbody>
-    </table>
-    <table>
-        <thead>
-            <tr >
+        </table>
+    </div>
+    <div>
+        <table>
+            <tr>
                 <th><span class="picture1"></span> Name &#8194;<span class="triangle">&#9660;</span></th>
                 <th>Date</th>
-                <th>    </th>
+                <th></th>
             </tr>
-        </thead>
-        <tbody>
-            <tr >
-                <td >
+            <tr>
+                <td>
                     <input type="checkbox" name="file" value="file1" id="file1"> 
                     <label for="file1">File.pdf</label>
                 </td>
                 <td class="color-grey">3 mins ago</td>
                 <td ><span >&#8226;&#8226;&#8226;</span></td>
             </tr>
-            <tr >
-                <td >
+            <tr>
+                <td>
                     <input type="checkbox" name="file" value="file2" id="file2" checked> 
                     <label for="file1">File.pdf</label>
                 </td>
                 <td class="color-grey">Yesterday</td>
                 <td ><span >&#8226;&#8226;&#8226;</span></td>
             </tr>
-            <tr >
-                <td >
+            <tr>
+                <td>
                     <input type="checkbox" name="file" value="file3" id="file3" > 
                     <label for="file1">File.pdf</label>
                 </td>
                 <td class="color-grey">June 1st, 2019</td>
                 <td ><span >&#8226;&#8226;&#8226;</span></td>
             </tr>
-        </tbody>
-    </table>
-    <table>
-        <thead>
-            <tr >
+        </table>
+    </div>
+    <div>
+        <table>
+            <tr>
                 <th>&#8194;Name &#8194;<span class="triangle">&#9660;</span></th>
                 <th>Date</th>
                 <th><form class="point" action="search">
@@ -78,25 +74,23 @@
                     </form>
                 </th>
             </tr>
-        </thead>
-        <tbody>
-            <tr >
-                <td ><span class="picture3"></span> File.pdf</td>
+            <tr>
+                <td><span class="picture3"></span> File.pdf</td>
                 <td class="color-grey">3 mins ago</td>
-                <td ><span id="retreat">&#8226;&#8226;&#8226;</span></td>
+                <td><span id="retreat">&#8226;&#8226;&#8226;</span></td>
             </tr>
-            <tr >
-                <td ><span class="picture3"></span> File.pdf</td>
+            <tr>
+                <td><span class="picture3"></span> File.pdf</td>
                 <td class="color-grey">Yesterday</td>
                 <td ><span >&#8226;&#8226;&#8226;</span></td>
             </tr>
-            <tr >
+            <tr>
                 <td ><span class="picture3"></span> File.pdf</td>
                 <td class="color-grey">June 1st, 2019</td>
                 <td ><span >&#8226;&#8226;&#8226;</span></td>
             </tr>
-        </tbody>
-    </table>
+        </table>
+    </div>
     </main>
 </body> 
 </html> 
