--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div>
         <table id="table2">
             <tr>
-                <th><span class="check"></span> Name&#8194;&#9660;</th>
+                <th>&#160;<span class="check"></span> Name&#8194;&#9660;</th>
                 <th>Date</th>
                 <th></th>
             </tr>
